# JUCE

./: CMakeLists.txt
TestPlugin/: CMakeLists.txt  TestPlugin.jucer
TestPlugin/Builds/VisualStudio2022/: TestPlugin.sln  TestPlugin_SharedCode.vcxproj  TestPlugin_SharedCode.vcxproj.filters  TestPlugin_StandalonePlugin.vcxproj  TestPlugin_VST3.vcxproj  TestPlugin_VST3ManifestHelper.vcxproj  resources.rc
TestPlugin/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
TestPlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
